[project]
name = "oc_debug_tool"
version = "0.1.0"
description = "oc_debug_tool"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "rich>=14.0.0",
    "typer>=0.16.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.scripts]
oc-debug = "oc_debug_tool.main:app"
